[tool.poetry]
name = "chainlit-sample"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "chainlit_sample"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
streamlit = "^1.25.0"
langchain = "^0.0.260"
python-dotenv = "^1.0.0"
openai = "^0.27.8"
qdrant-client = "^1.4.0"
tiktoken = "^0.4.0"

[dependencies]
qdrant-client = ">=1.4.0,<2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
